--- a/puzzle-web/package.json
+++ b/puzzle-web/package.json
@@ -13,7 +13,8 @@
     "jotai": "^2.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "zzfx": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
